Refactor API endpoints and improve HTML + CSS
* API endpoints refactored to use a helper function to make them easier to maintain.
* Created single endpoint that calls all endpoints article metadata endpoints as an easy way to consume the service.
* Minor CSS and HTML tweaks to improve how information is displayed - making better use of space and fixing bugs.
* Copy changes to improve clarity and consistancy of information displayed.
* Added version number to footer.

--- a/css/index.css
+++ b/css/index.css
@@ -18,3 +18,15 @@ progress::-moz-progress-bar {
   border-radius: 10px;
   background-color: rgb(48,124,246);
 }
+
+ol, ul {
+  padding-left: 20px;
+}
+
+ul {
+  list-style-type: square;
+}
+
+th, td {
+  padding: 5px;
+}
