--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,11 @@
 @import "locale";
 @import "structured-data";
 
+body {
+  margin-top: 20px;
+  font-size: .9em;
+}
+
 header,
 footer {
   display: block;
