--- a/css/article.css
+++ b/css/article.css
@@ -16,3 +16,14 @@
     display: none;
   }
 }
+
+@media (min-width: 768px) {
+  .article {
+    section {
+      display: none;
+      hr:first-child {
+        display: none;
+      }
+    }
+  }
+}
