Refactor indicators to trustIndicators; update UI
* Breaking API change to rename `indicators` to `trustIndicators`
* Added placeholder for `feedback` values (e.g. to hold suggestions)
* Improved UI; added submit button to all input elements

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -12,10 +12,11 @@
 }
 
 .sidebar__heading {
-  font-weight: 600;
-  text-transform: uppercase;
   font-size: 0.9em;
-  margin: 10px;
+}
+
+.sidebar {
+  font-size: 0.9em;
 }
 
 .sidebar-sticky {
