--- a/css/home.css
+++ b/css/home.css
@@ -4,11 +4,11 @@
   padding-top: 5em;
   position: relative;
   .home__jumbotron-background-image {
-    height: 500px;
+    height: 100vh;
     width: 100%;
     background-image: url(/static/undraw_site_content_ihgn.svg);
     background-repeat: no-repeat;
-    background-position: center -9em;
+    background-position: center -200px;
     position: absolute;
     opacity: 0.4;
   }
@@ -26,10 +26,13 @@
     padding: 1em;
   }
   @media (min-width: 768px) {
-    margin-bottom: 9em;
-    padding-top: 9em;
+    margin-bottom: 6em;
+    padding-top: 6em;
     .home__jumbotron-background {
-      height: 30em;
+      height: 26em;
+    }
+    .home__jumbotron-background-image {
+      background-position: center -150px;
     }
     form {
       padding: 2em;
