--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -18,8 +18,7 @@
 .sidebar-sticky {
   position: -webkit-sticky;
   position: sticky;
-  height: calc(100vh - 48px);
-  padding-top: .5rem;
+  padding-top: 7px;
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
