Set max width on article page
Also fixes bug with "Inspect" button not being disabled on mobile while in progress state is true.

--- a/css/article.css
+++ b/css/article.css
@@ -21,6 +21,9 @@
 
 @media (min-width: 768px) {
   .article {
+    .article__sections {
+      max-width: 1140px;
+    }
     section {
       display: none;
       hr:first-child {
