--- a/css/sentiment.css
+++ b/css/sentiment.css
@@ -28,6 +28,10 @@
     .ct-chart {
       height: 12em;
       font-weight: bold;
+      text.ct-label {
+        fill: #fff !important;
+        font: 1.5em sans-serif;
+      }
     }
     .sentiment__piechart--negative {
       stroke: var(--sentiment-negative-color);
