Refactor indicator charts to simplify them
Further refactoring planned for the gauge component at some point.

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 /*@import "../node_modules/bootstrap-material-design/dist/css/bootstrap-material-design.css";*/
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
 @import "article";
-@import "sentiment";
+@import "indicator";
 @import "sidebar";
 @import "structured-data";
 
