Fix bug with numbers under indicators
Now respects labels, so can be percentages or absolute values.

--- a/css/indicator.css
+++ b/css/indicator.css
@@ -59,8 +59,7 @@
         font-weight: bold;
         text {
           &.ct-label {
-            fill: #fff !important;
-            font-size: 0.8em;
+            display: none;
           }
         }
       }
