--- a/css/index.css
+++ b/css/index.css
@@ -81,40 +81,61 @@ table {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 2.5em;
   font-weight: 300;
   line-height: 1.5em;
   text-transform: capitalize;  
 }
 
 h2 {
-  font-size: 3em;
+  font-size: 1.75em;
   font-weight: 300;
   line-height: 1.5em;
   text-transform: capitalize;
 }
 
 h3 {
+  font-size: 1.25em;
   font-weight: 300;
-  font-size: 2.25em;
   line-height: 1.5em;
   text-transform: capitalize;
 }
 
 h4 {
   font-weight: 600;
-  font-size: 1.75em;
+  font-size: 1.25em;
   line-height: 1.25em;
 }
 
 h5 {
   font-weight: 600;
-  font-size: 1.5em;
+  font-size: 1.25em;
   line-height: 1.25em;
 }
 
 h6 {
   font-weight: 700;
-  font-size: 1.25em;
-  line-height: 1.25em;
+  font-size: 1em;
+  line-height: 1em;
+}
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 4em;
+  }
+  h2 {
+    font-size: 3em;
+  }
+  h3 {
+    font-size: 2.25em;;
+  }
+  h4 {
+    font-size: 1.75em;
+  }
+  h5 {
+    font-size: 1.5em;
+  }
+  h6 {
+    font-size: 1.25em;
+  }
 }
