--- a/css/home.css
+++ b/css/home.css
@@ -25,7 +25,16 @@
     margin: 1em 0;
     padding: 1em;
   }
+  h3 {
+    font-size: 2em;
+  }
   @media (min-width: 768px) {
+    .home__jumbotron-background {
+      height: 24em;
+    }
+    h3 {
+      font-size: 2.5em;
+    }
     form {
       padding: 2em;
     }
