--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
 @import "article";
 @import "indicator";
+@import "topics";
 @import "sidebar";
 @import "structured-data";
 
