--- a/css/article.css
+++ b/css/article.css
@@ -8,6 +8,11 @@
       hr:first-child {
         display: none;
       }
+      &#article-summary {
+        hr:first-child {
+          display: block;
+        }
+      }
     }
   }
 }
